--- a/src/main/css/flex.css
+++ b/src/main/css/flex.css
@@ -1,4 +1,5 @@
 /** @define utilities */
+/*! superfly-css-utilities-layout | MIT License | https://github.com/superfly-css/superfly-css-utilities-layout/blob/master/LICENSE.md */
 
 /**
  * Flex Container Level Utilities
