--- a/src/main/css/padding.css
+++ b/src/main/css/padding.css
@@ -1,15 +1,23 @@
-@import "superfly-css-variables-dimension";
+@each $dimension in left, right, top, bottom {
+      .u-padding-$(dimension)-halfx {
+          padding-$(dimension): 0.5rem !important;
+      }
+}
 
 @each $dimension in left, right, top, bottom {
-    @each $factor in half, 1, 2, 3, 4, 5 {
+    @for $factor from 1 to 20 {
         .u-padding-$(dimension)-$(factor)x {
-            padding-$(dimension): var(--spacer-$(factor)x) !important;
+            padding-$(dimension): $(factor)rem !important;
         }
     }
 }
 
-@each $factor in half, 1, 2, 3, 4, 5 {
+.u-padding-halfx {
+    padding: 0.5rem !important;
+}
+
+@for $factor from 1 to 20 {
     .u-padding-$(factor)x {
-        padding: var(--spacer-$(factor)x) !important;
+        padding: $(factor)rem !important;
     }
 }
