--- a/src/main/css/height-width.css
+++ b/src/main/css/height-width.css
@@ -8,6 +8,10 @@
     }
 }
 
+.u-height-100 {
+  height: 100%;
+}
+
 .u-width-halfx {
     width: 0.5rem !important;
 }
@@ -16,4 +20,8 @@
     .u-width-$(factor)x {
         width: $(factor)rem !important;
     }
+}
+
+.u-width-100 {
+  width: 100%;
 }
