Add margins to index.css

--- a/src/main/css/index.css
+++ b/src/main/css/index.css
@@ -6,6 +6,7 @@
 @import "./md-flex.css";
 @import "./lg-flex.css";
 @import "./padding.css";
+@import "./margins.css";
 @import "./height-width.css";
 
 :root {
