Added absolute positioning utilities

--- a/src/main/css/index.css
+++ b/src/main/css/index.css
@@ -9,7 +9,7 @@
 @import "./margins.css";
 @import "./height-width.css";
 @import "./zindex.css";
-@import "./postion.css";
+@import "./position.css";
 
 :root {
   --position-fixed: {
