--- a/src/main/css/position.css
+++ b/src/main/css/position.css
@@ -1,5 +1,30 @@
 @each $position in static, relative, absolute, fixed {
-    .u-position-$(postion) {
-        postion: $(postion) !important;
+    .u-position-$(position) {
+        position: $(position) !important;
     }
 }
+
+.u-top-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.u-top-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.u-bottom-right {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.u-bottom-left {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
