--- a/src/main/css/margins.css
+++ b/src/main/css/margins.css
@@ -4,6 +4,14 @@
       }
 }
 
+:root {
+    @each $dimension in left, right, top, bottom {
+          --u-margin-$(dimension)-halfx {
+              margin-$(dimension): 0.5rem !important;
+          }
+    }
+}
+
 @each $dimension in left, right, top, bottom {
     @for $factor from 1 to 20 {
         .u-margin-$(dimension)-$(factor)x {
@@ -12,12 +20,38 @@
     }
 }
 
+:root {
+    @each $dimension in left, right, top, bottom {
+        @for $factor from 1 to 20 {
+            --u-margin-$(dimension)-$(factor)x {
+                margin-$(dimension): $(factor)rem !important;
+            }
+        }
+    }
+}
+
+
 .u-margin-halfx {
     margin: 0.5rem !important;
 }
 
+:root {
+  --u-margin-halfx {
+      margin: 0.5rem !important;
+  }
+}
+
+
 @for $factor from 1 to 20 {
     .u-margin-$(factor)x {
         margin: $(factor)rem !important;
+    }
+}
+
+:root {
+    @for $factor from 1 to 20 {
+        --u-margin-$(factor)x {
+            margin: $(factor)rem !important;
+        }
     }
 }
