--- a/src/main/css/position.css
+++ b/src/main/css/position.css
@@ -4,10 +4,26 @@
     }
 }
 
+:root {
+  @each $position in static, relative, absolute, fixed {
+      --u-position-$(position) {
+          position: $(position) !important;
+      }
+  }
+}
+
 .u-top-right {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+:root {
+  --u-top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
 
 .u-top-left {
@@ -16,10 +32,26 @@
   left: 0;
 }
 
+:root {
+  --u-top-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
 .u-bottom-right {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+:root {
+  --u-bottom-right {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
 }
 
 .u-bottom-left {
@@ -28,3 +60,10 @@
   left: 0;
 }
 
+:root {
+  --u-bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
