--- a/src/main/css/height-width.css
+++ b/src/main/css/height-width.css
@@ -23,6 +23,103 @@
 }
 
 :root {
+  --u-min-height-halfx {
+      min-height: 0.5rem !important;
+  }
+}
+
+.u-min-height-halfx {
+    @apply(--u-min-height-halfx);
+}
+
+:root {
+  @for $factor from 0 to 50 {
+      --u-min-height-$(factor)x {
+          min-height: $(factor)rem !important;
+      }
+  }
+}
+
+@for $factor from 0 to 50 {
+    .u-min-height-$(factor)x {
+        @apply(--u-min-height-$(factor)x);
+    }
+}
+
+:root {
+  --u-max-height-halfx {
+      max-height: 0.5rem !important;
+  }
+}
+
+.u-max-height-halfx {
+    @apply(--u-max-height-halfx);
+}
+
+:root {
+  @for $factor from 0 to 50 {
+      --u-max-height-$(factor)x {
+          max-height: $(factor)rem !important;
+      }
+  }
+}
+
+@for $factor from 0 to 50 {
+    .u-max-height-$(factor)x {
+        @apply(--u-max-height-$(factor)x);
+    }
+}
+
+:root {
+  --u-min-width-halfx {
+      min-width: 0.5rem !important;
+  }
+}
+
+.u-min-width-halfx {
+    @apply(--u-min-width-halfx);
+}
+
+:root {
+  @for $factor from 0 to 50 {
+      --u-min-width-$(factor)x {
+          min-width: $(factor)rem !important;
+      }
+  }
+}
+
+@for $factor from 0 to 50 {
+    .u-min-width-$(factor)x {
+        @apply(--u-min-width-$(factor)x);
+    }
+}
+
+:root {
+  --u-max-width-halfx {
+      max-width: 0.5rem !important;
+  }
+}
+
+.u-max-width-halfx {
+    @apply(--u-max-width-halfx);
+}
+
+:root {
+  @for $factor from 0 to 50 {
+      --u-max-width-$(factor)x {
+          max-width: $(factor)rem !important;
+      }
+  }
+}
+
+@for $factor from 0 to 50 {
+    .u-max-width-$(factor)x {
+        @apply(--u-max-width-$(factor)x);
+    }
+}
+
+
+:root {
   --u-height-100 {
     height: 100% !important;
   }
