--- a/src/main/css/index.css
+++ b/src/main/css/index.css
@@ -22,7 +22,7 @@
 }
 
 .u-full-screen {
-  @apply --position-absolute;
+  @apply( --position-absolute);
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -30,8 +30,14 @@
   margin: auto !important;
 }
 
+.u-fill-container {
+    @apply( --position-absolute);
+    height:100%;
+    width: 100%;
+}
+
 .u-sticky-header {
-    @apply --position-fixed;
+    @apply(--position-fixed);
     z-index: var(--zindex-sticky);
     top: 0px;
 }
