--- a/src/main/css/margins.css
+++ b/src/main/css/margins.css
@@ -1,57 +1,43 @@
 @each $dimension in left, right, top, bottom {
-      .u-margin-$(dimension)-halfx {
-          margin-$(dimension): 0.5rem !important;
-      }
-}
-
-:root {
-    @each $dimension in left, right, top, bottom {
+  :root {
           --u-margin-$(dimension)-halfx {
-              margin-$(dimension): 0.5rem !important;
-          }
+              margin-$(dimension): 0.5rem;
     }
+  }
+  .u-margin-$(dimension)-halfx {
+      margin-$(dimension): 0.5rem !important;
+  }
 }
 
 @each $dimension in left, right, top, bottom {
-    @for $factor from 0 to 20 {
-        .u-margin-$(dimension)-$(factor)x {
-            margin-$(dimension): $(factor)rem !important;
-        }
+  :root {
+      --u-margin-$(dimension)-$(factor)x {
+            margin-$(dimension): $(factor)rem;
+      }
+    }
+    .u-margin-$(dimension)-$(factor)x {
+        margin-$(dimension): $(factor)rem !important;
     }
 }
 
 :root {
-    @each $dimension in left, right, top, bottom {
-        @for $factor from 0 to 20 {
-            --u-margin-$(dimension)-$(factor)x {
-                margin-$(dimension): $(factor)rem !important;
-            }
-        }
-    }
+  --u-margin-halfx {
+      margin: 0.5rem;
+  }
 }
-
 
 .u-margin-halfx {
     margin: 0.5rem !important;
 }
 
-:root {
-  --u-margin-halfx {
-      margin: 0.5rem !important;
-  }
-}
-
 
 @for $factor from 0 to 20 {
-    .u-margin-$(factor)x {
+  :root {
+      --u-margin-$(factor)x {
+          margin: $(factor)rem;
+      }
+  }
+  .u-margin-$(factor)x {
         margin: $(factor)rem !important;
-    }
-}
-
-:root {
-    @for $factor from 0 to 20 {
-        --u-margin-$(factor)x {
-            margin: $(factor)rem !important;
-        }
-    }
+  }
 }
