--- a/src/main/css/padding.css
+++ b/src/main/css/padding.css
@@ -1,32 +1,24 @@
 @each $dimension in left, right, top, bottom {
-      .u-padding-$(dimension)-halfx {
-          padding-$(dimension): 0.5rem !important;
-      }
-}
-
-:root {
-  @each $dimension in left, right, top, bottom {
+  :root {
         --u-padding-$(dimension)-halfx {
-            padding-$(dimension): 0.5rem !important;
+            padding-$(dimension): 0.5rem;
         }
+  }
+  .u-padding-$(dimension)-halfx {
+      padding-$(dimension): 0.5rem !important;
   }
 }
 
 @each $dimension in left, right, top, bottom {
     @for $factor from 0 to 20 {
-        .u-padding-$(dimension)-$(factor)x {
-            padding-$(dimension): $(factor)rem !important;
-        }
-    }
-}
-
-:root {
-    @each $dimension in left, right, top, bottom {
-        @for $factor from 0 to 20 {
+      :root {
             --u-padding-$(dimension)-$(factor)x {
-                padding-$(dimension): $(factor)rem !important;
+                padding-$(dimension): $(factor)rem;
             }
-        }
+      }
+      .u-padding-$(dimension)-$(factor)x {
+          padding-$(dimension): $(factor)rem !important;
+      }
     }
 }
 
@@ -36,20 +28,17 @@
 
 :root {
   --u-padding-halfx {
-      padding: 0.5rem !important;
+      padding: 0.5rem;
   }
 }
 
 @for $factor from 0 to 20 {
-    .u-padding-$(factor)x {
-        padding: $(factor)rem !important;
-    }
-}
-
-:root {
-  @for $factor from 0 to 20 {
+  :root {
       --u-padding-$(factor)x {
-          padding: $(factor)rem !important;
+          padding: $(factor)rem;
       }
+  }
+  .u-padding-$(factor)x {
+      padding: $(factor)rem !important;
   }
 }
