--- a/src/main/css/position.css
+++ b/src/main/css/position.css
@@ -1,21 +1,18 @@
 @each $position in static, relative, absolute, fixed {
-    .u-position-$(position) {
-        position: $(position) !important;
-    }
-}
-
-:root {
-  @each $position in static, relative, absolute, fixed {
+  :root {
       --u-position-$(position) {
-          position: $(position) !important;
+          position: $(position);
       }
+  }
+  .u-position-$(position) {
+      position: $(position) !important;
   }
 }
 
 .u-top-right {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: absolute !important;
+  top: 0 !important;
+  right: 0 !important;
 }
 
 :root {
@@ -26,12 +23,6 @@
   }
 }
 
-.u-top-left {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 :root {
   --u-top-left {
     position: absolute;
@@ -40,11 +31,12 @@
   }
 }
 
-.u-bottom-right {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+.u-top-left {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
 }
+
 
 :root {
   --u-bottom-right {
@@ -54,10 +46,10 @@
   }
 }
 
-.u-bottom-left {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+.u-bottom-right {
+  position: absolute !important;
+  bottom: 0 !important;
+  right: 0 !important;
 }
 
 :root {
@@ -66,4 +58,10 @@
     bottom: 0;
     left: 0;
   }
+}
+
+.u-bottom-left {
+  position: absolute !important;
+  bottom: 0 !important;
+  left: 0 !important;
 }
