--- a/src/main/css/zindex.css
+++ b/src/main/css/zindex.css
@@ -1,14 +1,12 @@
 @import "superfly-css-variables-dimension";
-@each $type in zindex-dropdown-backdrop, zindex-navbar, zindex-dropdown, zindex-fixed, zindex-modal-backdrop, zindex-modal, zindex-popover, zindex-tooltip {
-    .u-$(type) {
-        z-index: var(--$(type)) !important;
-    }
-}
 
-:root {
-    @each $type in zindex-dropdown-backdrop, zindex-navbar, zindex-dropdown, zindex-fixed, zindex-modal-backdrop, zindex-modal, zindex-popover, zindex-tooltip {
-        --u-$(type) {
-            z-index: var(--$(type)) !important;
-        }
+@each $type in zindex-dropdown-backdrop, zindex-navbar, zindex-dropdown, zindex-fixed, zindex-modal-backdrop, zindex-modal, zindex-popover, zindex-tooltip {
+  :root {
+    --u-$(type) {
+        z-index: var(--$(type));
     }
+  }
+  .u-$(type) {
+      z-index: var(--$(type)) !important;
+  }
 }
