--- a/src/main/css/margins.css
+++ b/src/main/css/margins.css
@@ -10,14 +10,16 @@
 }
 
 @each $dimension in left, right, top, bottom {
-  :root {
-      --u-margin-$(dimension)-$(factor)x {
-            margin-$(dimension): $(factor)rem;
+  @for $factor from 0 to 20 {
+    :root {
+        --u-margin-$(dimension)-$(factor)x {
+              margin-$(dimension): $(factor)rem;
+        }
       }
-    }
-    .u-margin-$(dimension)-$(factor)x {
-        margin-$(dimension): $(factor)rem !important;
-    }
+      .u-margin-$(dimension)-$(factor)x {
+          margin-$(dimension): $(factor)rem !important;
+      }
+  }
 }
 
 :root {
