Added text layout utilities

--- a/src/main/css/index.css
+++ b/src/main/css/index.css
@@ -11,6 +11,7 @@
 @import "./zindex.css";
 @import "./position.css";
 @import "./borders.css";
+@import "./text.css";
 
 :root {
   --position-fixed: {
